<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="motivationalapps.t_44c.Feedback">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/contact_form_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/title_send_feedback"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/feedback_info"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/feedback"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:fitsSystemWindows="true"
                android:gravity="top"
                android:hint="Your Message"
                android:inputType="textMultiLine"
                android:padding="5dp" />

            <Button
                android:id="@+id/feedbackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/button_feedback" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
